# rust-taskflow

./: .gitignore  Cargo.toml  requirement.txt
src/: main.rs
src/application/: mod.rs  services.rs  user_cases.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: task.rs  user.rs
src/infrastructure/db/: mod.rs  user_repo.rs
src/infrastructure/redis/: redis_service.rs
src/interfaces/: mod.rs
src/interfaces/api/routes/: mod.rs  task_routes.rs  user_routes.rs
src/interfaces/http/: handlers.rs
