[package]
name = "taskflow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
dotenv = "0.15.0"
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.0"
axum = "0.7.7"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
bb8-redis = {version = "0.17.0"}
json-web-token = "0.2.0"
argon2 = "0.6.0-pre.1"
thiserror = "1.0.64"
chrono = "0.4.38"
